hphp/hack/test/typecheck/lambda/lambda09.php.exp
File "lambda09.php", line 19, characters 12-13:
The variable $y is defined (Naming[2007])
File "lambda09.php", line 17, characters 7-8:
But in a different scope
